dark mode: fix hparams, graph, mesh, and profile (#5040)
This change fixes the visuals of hparams, graph, mesh and profile
redirection plugin under the dark mode.

Do note that we did not attempt to have a generic solution for all
iframe based plugin since it becomes wildly more difficult to reliably
apply dark styles. Instead, we will show the default light mode which
will be quite jarring but that's the best we can do as of right now.

--- a/tensorboard/webapp/theme/_tb_theme.template.scss
+++ b/tensorboard/webapp/theme/_tb_theme.template.scss
@@ -43,7 +43,8 @@ $tb-foreground: map_merge(
 $tb-background: map_merge(
   $mat-light-theme-background,
   (
-    background: #fff,
+    // Default is `map.get($grey-palette, 50)`.
+    background: #fff
   )
 );
 
@@ -60,8 +61,10 @@ $tb-dark-foreground: map-get($tb-dark-theme, foreground);
 $tb-dark-background: map-get($tb-dark-theme, background);
 
 @mixin tb-dark-theme {
-  @at-root :host-context(body.dark-mode) #{&} {
-    @content;
+  @each $selector in & {
+    @at-root :host-context(body.dark-mode) #{$selector} {
+      @content;
+    }
   }
 }
 
